--- a/cr-pi-countries-main/client/src/App.css
+++ b/cr-pi-countries-main/client/src/App.css
@@ -1,10 +1,10 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
 }
-
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +39,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
