--- a/cr-pi-countries-main/client/src/index.css
+++ b/cr-pi-countries-main/client/src/index.css
@@ -14,21 +14,34 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
+} */
+/* a:hover {
   color: #535bf2;
-}
+} */
 
 body {
+ 
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
+*{
+  margin: 0;
+  border: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: Cambria, Georgia, Times, 'Times New Roman', serif;
+ 
+  /* cambria detail */
+  
 }
 
 h1 {
