--- a/cr-pi-countries-main/client/src/Components/Country/Country.module.css
+++ b/cr-pi-countries-main/client/src/Components/Country/Country.module.css
@@ -1,7 +1,7 @@
 .countryContainerHome {
     width: 300px;
     height: max-content;
-    background-color: #FFFF;
+    background-color: #d0f4f7;
     padding-bottom: 10px;
     border-radius: 7px;
     border: 1px solid #204768;
